# paragrep

./: .gitignore  CHANGELOG  CHANGELOG.md  INSTALL  LICENSE  MANIFEST.in  PUBLISHING.md  README  README.md  build.sh  check-code.sh  epydoc.cfg  epydoc.css  index.md  install-home.sh  license.md  paragrep.py  paragrep.wpr  pyproject.toml  setup.cfg  setup.py
_includes/: header.html
docs/: paragrep.1
man/: paragrep.1
paragrep/: __init__.py
